--- a/project.yaml
+++ b/project.yaml
@@ -5,10 +5,10 @@ expectations:
 
 actions:
   generate_study_population:
-    run: cohortextractor:latest generate_cohort --study-definition study_definition
+    run: cohortextractor:latest generate_cohort --study-definition study_definition --index-date-range "2015-03-01 to 2022-02-01 by month"
     outputs:
       highly_sensitive:
-        cohort: output/input.csv
+        cohort: output/input.csv2
 
   describe:
     run: python:latest python analysis/report.py
