--- a/project.yaml
+++ b/project.yaml
@@ -10,3 +10,17 @@ actions:
     outputs:
       highly_sensitive:
         cohort: output/input.csv
+
+  generate_study_population_ethnicity:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_ethnicity --output-dir=output/data #--output-format=feather
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_ethnicity.csv
+        
+  join_ethnicity:
+    run: python:latest python analysis/join_ethnicity.py
+    needs: [generate_study_population, generate_study_population_ethnicity]
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input*.csv
+        
