--- a/project.yaml
+++ b/project.yaml
@@ -6,10 +6,10 @@ expectations:
 actions:
 
   generate_study_population:
-    run: cohortextractor:latest generate_cohort --study-definition study_definition
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data
     outputs:
       highly_sensitive:
-        cohort: output/input.csv
+        cohort: output/data/input_all.csv
 
   generate_study_population_ethnicity:
     run: cohortextractor:latest generate_cohort --study-definition study_definition_ethnicity --output-dir=output/data #--output-format=feather
@@ -18,7 +18,7 @@ actions:
         cohort: output/data/input_ethnicity.csv
         
   join_ethnicity:
-    run: python:latest python analysis/join_ethnicity.py
+    run: python:latest python analysis/join_ethnicity.py --output-dir=output/data
     needs: [generate_study_population, generate_study_population_ethnicity]
     outputs:
       highly_sensitive:
