--- a/project.yaml
+++ b/project.yaml
@@ -10,6 +10,14 @@ actions:
     outputs:
       highly_sensitive:
         cohort: output/data/input_all.csv
+        
+  generate_study_population_1:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2015-03-01"
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_2015-03-01.csv  
+
+  
 
   generate_study_population_ethnicity:
     run: cohortextractor:latest generate_cohort --study-definition study_definition_ethnicity --output-dir=output/data #--output-format=feather
