--- a/project.yaml
+++ b/project.yaml
@@ -27,8 +27,10 @@ actions:
         
   join_ethnicity:
     run: python:latest python analysis/join_ethnicity.py --output-dir=output/data
-    needs: [generate_study_population, generate_study_population_ethnicity]
+    needs: [generate_study_population, generate_study_population_1, generate_study_population_ethnicity]
     outputs:
       highly_sensitive:
         cohort: output/data/input*.csv
-        
+
+
+    
