--- a/project.yaml
+++ b/project.yaml
@@ -1,16 +1,13 @@
 version: '3.0'
 
 expectations:
-  population_size: 1000
+  population_size: 100
 
 actions:
 
-  generate_study_population:
-    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data
-    outputs:
-      highly_sensitive:
-        cohort: output/data/input_all.csv
-        
+
+
+  ## use the Measure function to allow data for different time periods to be extracted in the same study population:  --index-date-range ""yyyy-mm-dd""   
   generate_study_population_1:
     run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2015-03-01"
     outputs:
@@ -48,7 +45,7 @@ actions:
       highly_sensitive:
         cohort: output/data/input_all_2020-03-01.csv  
    
- generate_study_population_7:
+  generate_study_population_7:
     run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2021-03-01"
     outputs:
       highly_sensitive:
@@ -68,7 +65,7 @@ actions:
         
   join_ethnicity:
     run: python:latest python analysis/join_ethnicity.py --output-dir=output/data
-    needs: [generate_study_population, generate_study_population_1, generate_study_population_2, generate_study_population_3, generate_study_population_4, generate_study_population_5, generate_study_population_6, generate_study_population_7, generate_study_population_ethnicity]
+    needs: [generate_study_population_1, generate_study_population_2, generate_study_population_3, generate_study_population_4, generate_study_population_5, generate_study_population_6, generate_study_population_7, generate_study_population_ethnicity]
     outputs:
       highly_sensitive:
         cohort: output/data/input*.csv
