--- a/project.yaml
+++ b/project.yaml
@@ -71,4 +71,9 @@ actions:
         cohort: output/data/input*.csv
 
 
-    
+  generate_BMI_R:
+    run: r:latest analysis/BMI.R --output-dir=output/data
+    needs: [join_ethnicity]
+    outputs:
+      highly_sensitive:
+        cohort: output/data/BMI_complete_categories.csv
